# TRACE-GFN

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml
logs/: README.md
src/gflownet/: config.py  online_trainer.py  trainer.py
src/gflownet/algo/: config.py  reaction_sampling.py  trajectory_balance_synthesis.py
src/gflownet/data/: config.py  init_compound.txt  replay_buffer.py  sampling_iterator.py
src/gflownet/data/AKT1/: init_compound_10.smi  init_compound_6.smi  init_compound_7.smi  init_compound_8.smi  init_compound_9.smi
src/gflownet/data/CXCR4/: init_compound_11.smi  init_compound_12.smi  init_compound_13.smi  init_compound_14.smi  init_compound_15.smi
src/gflownet/data/DRD2/: init_compound_1.smi  init_compound_2.smi  init_compound_3.smi  init_compound_4.smi  init_compound_5.smi
src/gflownet/data/USPTO/: src_test_product.txt  src_valid_product.txt  tgt_test_reactant.txt  tgt_valid_reactant.txt
src/gflownet/models/: config.py  mlp.py  qsar_CXCR4_optimized.pkl
src/gflownet/models/GCN/: callbacks.py  mol2graph.py  none.py  train.py  utils.py
src/gflownet/models/Transformer/: beam_search.py  model.py  preprocess.py  train.py  utils.py
src/gflownet/tasks/: config.py  qsar_reactions.py
src/gflownet/utils/: conditioning.py  config.py  sascore.py  transforms.py  utils.py
